--- a/package.json
+++ b/package.json
@@ -1,29 +1,39 @@
 {
-  "name": "invader-shop",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "test-repo-2",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "node index.js"
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "author": "Alishba",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "@paypal/checkout-server-sdk": "^1.0.3",
-    "@paypal/paypal-server-sdk": "^0.7.0",
-    "authorizenet": "^1.0.9",
-    "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^4.21.2",
-    "google-auth-library": "^9.15.1",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
-    "node-cron": "^3.0.3",
-    "nodemailer": "^6.10.1",
-    "paypal-rest-sdk": "^1.8.1",
-    "pg": "^8.14.0",
-    "stripe": "^17.7.0"
+    "@radix-ui/react-checkbox": "^1.3.1",
+    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-select": "^2.2.4",
+    "@radix-ui/react-separator": "^1.1.6",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-tooltip": "^1.2.6",
+    "@tanstack/react-table": "^8.21.3",
+    "axios": "^1.9.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "env": "^0.0.2",
+    "lucide-react": "^0.482.0",
+    "next": "^15.3.2",
+    "postcss": "^8.5.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.4"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@tailwindcss/postcss": "^4.1.7",
+    "eslint": "^9.27.0",
+    "eslint-config-next": "^15.2.2",
+    "tailwindcss": "^4.1.7"
   }
 }
