--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-# NEXT_PUBLIC_API_BASE_URL=http://localhost:5001
-NEXT_PUBLIC_API_BASE_URL=https://backend.nucleus.sale
+NEXT_PUBLIC_API_BASE_URL=http://localhost:5001/api
+# NEXT_PUBLIC_API_BASE_URL=https://backend.nucleus.sale
+NEXT_PUBLIC_ENCRYPTION_SECRET_KEY=your32characterminkey!!!!123456
