--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "env": "^0.0.2",
     "lucide-react": "^0.482.0",
     "next": "^15.3.2",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "scrypt-js": "^3.0.1",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.4"
@@ -36,6 +38,7 @@
     "@tailwindcss/postcss": "^4.1.7",
     "eslint": "^9.27.0",
     "eslint-config-next": "^15.2.2",
-    "tailwindcss": "^4.1.7"
+    "tailwindcss": "^4.1.7",
+    "tw-animate-css": "^1.3.0"
   }
 }
