--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@million/lint": "^1.0.14",
     "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-dialog": "^1.1.13",
-    "@radix-ui/react-select": "^2.2.4",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.6",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.12",
@@ -21,6 +21,7 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "env": "^0.0.2",
     "lucide-react": "^0.482.0",
     "next": "^15.3.2",
